--- a/templates/about.html
+++ b/templates/about.html
@@ -3,10 +3,13 @@
 {% block content %}
     <main class="about-section">
         <div class="container">
+
             <h2>About Learning Flask</h2>
             <p>
-                In Learning Flask, you'll build an app that let's you find new places around you. With this app you can find places you like, and discover new points of interests wherever you are.
+                 In Learning Flask, you'll build an app that let's you find new places around you. With this app you can find places you like, and discover new points of interest wherever you are.
             </p>
+
         </div>
     </main>
+
 {% endblock %}
