--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,23 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet'>
-        <link href="static/css/main.css" rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <div class="container">
-                <h1 class="title">Learning Flask</h1>
-            </div>
-        </header>
-        <main class="hero-section">
-            <div class="container">
-                <div class="section-container">
-                    <h2>Discover places near you.</h2>
-                    <a href="#" class="btn-primary">Sign Up</a>
-                    <a href="{{ url_for('about') }}" class="btn-secondary">Learn more</a>
-                </div>
-                <div class="section-device">
-                    <img src="static/img/device.png">            
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </main>
-    </body>
-</html>
+{% extends "layout.html" %} 
+
+{% block content %}
+
+<main class="hero-section">
+    <div class="container">
+
+        <div class="section-content">
+            <h2>Discover places near you.</h2>
+            <a href="{{ url_for('signup') }}" class="btn-primary">Sign up</a>
+            <a href="{{ url_for('about') }}" class="btn-secondary">Learn more</a>
+        </div>
+
+        <div class="section-device">
+            <img src="static/img/device.png">
+        </div>
+
+        <div class="clearfix"></div>
+
+    </div>
+</main>
+
+{% endblock %}
